--- a/mywebpage5.html
+++ b/mywebpage5.html
@@ -56,7 +56,7 @@
                padding: 20px 0;
                display: flex;
             }
-            .container .contactinfo .box .icon{
+            /*.container .contactinfo .box .icon{
                 min-width: 60px;
                 height: 60px;
                 background: #fff;
@@ -65,7 +65,7 @@
                 align-items: center;
                 border-radius: 50%;
                 font-size: 22px;
-            }
+            }*/
             .container .contactinfo .box .text{
                 display: flex;
                 margin-left: 20px;
