--- a/mywebpage3.html
+++ b/mywebpage3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Arkaprabha Samanta|SKILLS</title>
         <style>
             #heading{text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: x-large;color: #c4c5d4;}
