--- a/mywebpage4.html
+++ b/mywebpage4.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Arkaprabha Samanta|PROJECTS</title>
         <style>
             #heading{text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: x-large; color: #353640;}
